Improved README.md to better reflect the state of the project, and better explain how to compile and use